# master_epilepsy_detection

./: .gitignore  LICENSE  README.md  pyproject.toml  train.py
data/: BONN.py  CHBMIT.py  CHBMIT_old.py  CHBMIT_pred.py  CHBMIT_ps.py  __init__.py
engines/: __init__.py  engien4Exp.py  engine4Cla.py
models/: __init__.py  loss.py  model.py  modelv1.py
modules/: modules.py
scripts/: bonn-binary-ab-cd-8.sh  bonn-binary-abcd-e-8.sh  bonn-binary-cd-e-8.sh  bonn-ternary-ab-cd-e-8.sh  chbmit-binary-8-fv.sh  chbmit-binary-8.sh  chbmit-ternary-8 copy.sh  chbmit-ternary-8.sh
utils/: __init__.py  metrics.py  plot.py
