[project]
name = "master-epilepsy-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alive-progress>=3.2.0",
    "emoji>=2.14.1",
    "imblearn>=0.0",
    "ipykernel>=6.29.5",
    "mne>=1.9.0",
    "prettytable>=3.16.0",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "soundfile>=0.13.1",
    "statsmodels>=0.14.4",
    "swanlab>=0.5.8",
    "torch>=2.7.0",
    "torchaudio>=2.7.0",
    "torchmetrics>=1.7.1",
    "torchvision>=0.22.0",
]
